--- a/stage/css/main.scss
+++ b/stage/css/main.scss
@@ -2,5 +2,8 @@
 @import "sass/componentes/vars";
 @import "sass/layout/global";
 @import "sass/layout/header";
-@import "sass/layout/sidebar";
+@import "sass/layout/footer";
 @import "sass/componentes/buttons";
+@import "sass/pages/homepage";
+@import "sass/pages/jobs";
+@import "sass/pages/login";
