--- a/stage/css/sass/layout/_global.scss
+++ b/stage/css/sass/layout/_global.scss
@@ -1,14 +1,13 @@
 body {
-  font-family: "Poppins", sans-serif;
+  font-family: 'Open Sans', sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 16px !important;
   line-height: 24px !important;
-  background-color: #f3f5fa !important;
+  background-color: #ededed !important;
   scrollbar-color: var(--main-color) !important;
   scrollbar-width: auto;
   overflow-x: hidden;
-  height: 5000px;
   color: var(--font-color) !important;
   &::-webkit-scrollbar-track {
     background-color: transparent;
@@ -26,6 +25,46 @@ body {
       background: var(--main-color)
     }
   }
+}
+
+.overlay {
+  background: #000;
+  width: 100%;
+  height: 100vh;
+  position: absolute;
+  top: 0;
+  left: 0;
+  opacity: .35;
+}
+
+.wrapper {
+  position: relative;
+  overflow: hidden;
+  height: 100%;
+}
+
+.btn-white {
+  background: transparent;
+  border: 1px solid #fff;
+  color: #Fff;
+  &:hover {
+    color: #Fff !important;
+  }
+}
+
+.btn-large {
+  height: 40px;
+}
+
+.btn-small {
+  height: 32px;
+  line-height: 20px;
+  font-size: 14px;
+  padding: 5px 12px;
+}
+
+.btn-primary {
+  background-color: #0055D9;
 }
 
 h1 {
