--- a/stage/css/main.scss
+++ b/stage/css/main.scss
@@ -6,4 +6,6 @@
 @import "sass/componentes/buttons";
 @import "sass/pages/homepage";
 @import "sass/pages/jobs";
+@import "sass/pages/job";
 @import "sass/pages/login";
+@import "sass/pages/apply";
