--- a/stage/css/main.scss
+++ b/stage/css/main.scss
@@ -9,3 +9,5 @@
 @import "sass/pages/job";
 @import "sass/pages/login";
 @import "sass/pages/apply";
+@import "sass/pages/post";
+@import "sass/pages/add_post";
