--- a/stage/css/sass/layout/_header.scss
+++ b/stage/css/sass/layout/_header.scss
@@ -1,6 +1,9 @@
 .navbar.main-header {
   z-index: 100;
   height: 62px;
+  .nav-item a.nav-link {
+    text-transform: capitalize;
+  }
   .navbar-brand {
     color: inherit !important;
     font-weight: bold;
@@ -24,6 +27,9 @@
       text-decoration: none;
       line-height: 24px;
     }
+    .nav-item a.nav-link {
+      color: #fff;
+    }
   }
   &.navbar-fixed-top {
     background-color: #FFF;
@@ -37,6 +43,9 @@
     position: fixed;
     right: 0;
     z-index: 1030;
+    .nav-item a.nav-link {
+      color: inherit !important;
+    }
   }
   &.fixed-top {
     border: 0!important;
